--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port = 8081
 # Set here configurations for the database connection
 s
 # Connection url for the database "RPlayer"
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = ${JDBC_DATABASE_URL:}
 spring.jpa.properties.hibernate.default_schema = rlibrary
 
 # Username and password
