max file size 100mb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Carga las entidades para probar prueba
 carga.entidades.prueba = false
+
+# tam maximo de filleros
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
